[package]
name = "gitfix"
version = "0.1.0"
authors = ["Frederik Vestre <frederik.vestre@pexip.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gfx"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
git2 = "0.13.11"
regex = "1.3.9"
lazy_static = "1.4.0"
rustyline = "6.3.0"
hex = "0.4.2"